app/docs/data/docs/2.2/index/page.mdx
# API Platform documentation

## The Distribution: Create Powerful APIs with Ease

1.  [Creating a Fully Featured API in 5 Minutes](distribution/index.md)
2.  [Testing and Specifying the API](distribution/testing.md)

## The API Component

1.  [Introduction](core/index.md)
2.  [Getting Started](core/getting-started.md)
    1.  [Installing API Platform Core](core/getting-started.md#installing-api-platform-core)
    2.  [Before Reading this Documentation](core/getting-started.md#before-reading-this-documentation)
    3.  [Mapping the Entities](core/getting-started.md#mapping-the-entities)
3.  [General Design Considerations](core/design.md)
4.  [Configuration](core/configuration.md)
5.  [Operations](core/operations.md)
    1.  [Enabling and Disabling Operations](core/operations.md#enabling-and-disabling-operations)
    2.  [Configuring Operations](core/operations.md#configuring-operations)
    3.  [Subresources](core/operations.md#subresources)
    4.  [Creating Custom Operations and Controllers](core/operations.md#creating-custom-operations-and-controllers)
        1. [Recommended Method](core/operations.md#recommended-method)
        2. [Alternative Method](core/operations.md#alternative-method)
6.  [Overriding Default Order](core/default-order.md)
7.  [Filters](core/filters.md)
    1.  [Doctrine ORM Filters](core/filters.md#doctrine-orm-filters)
        1.  [Search Filter](core/filters.md#search-filter)
        2.  [Date Filter](core/filters.md#date-filter)
            1.  [Managing `null` Values](core/filters.md#managing-null-values)
        3.  [Boolean Filter](core/filters.md#boolean-filter)
        4.  [Numeric Filter](core/filters.md#numeric-filter)
        5.  [Range Filter](core/filters.md#range-filter)
        6.  [Exists Filter](core/filters.md#exists-filter)
        7.  [Order filter](core/filters.md#order-filter)
            1.  [Using a Custom Order Query Parameter Name](core/filters.md#using-a-custom-order-query-parameter-name)
        8.  [Filtering on Nested Properties](core/filters.md#filtering-on-nested-properties)
        9.  [Enabling a Filter for All Properties of a Resource](core/filters.md#enabling-a-filter-for-all-properties-of-a-resource)
    2.  [Serializer Filters](core/filters.md#serializer-filters)
        1.  [Group Filter](core/filters.md#group-filter)
        2.  [Property Filter](core/filters.md#property-filter)
    3.  [Creating Custom Filters](core/filters.md#creating-custom-filters)
        1.  [Creating Custom Doctrine ORM Filters](core/filters.md#creating-custom-doctrine-orm-filters)
            1. [Using Doctrine Filters](core/filters.md#using-doctrine-filters)
        2.  [Overriding Extraction of Properties from the Request](core/filters.md#overriding-extraction-of-properties-from-the-request)
    4.  [ApiFilter Annotation](core/filters.md#apifilter-annotation)
8.  [The Serialization Process](core/serialization.md)
    1.  [Overall Process](core/serialization.md#overall-process)
    2.  [Available Serializers](core/serialization.md#available-serializers)
    3.  [The Serialization Context, Groups and Relations](core/serialization.md#the-serialization-context-groups-and-relations)
        1.  [Configuration](core/serialization.md#configuration)
    4.  [Using Serialization Groups](core/serialization.md#using-serialization-groups)
    5.  [Using Different Serialization Groups per Operation](core/serialization.md#using-different-serialization-groups-per-operation)
        1.  [Embedding Relations](core/serialization.md#embedding-relations)
        2.  [Normalization](core/serialization.md#normalization)
        3.  [Denormalization](core/serialization.md#denormalization)
    6.  [Changing the Serialization Context Dynamically](core/serialization.md#changing-the-serialization-context-dynamically)
    7.  [Changing the Serialization Context on a Per Item Basis](core/serialization.md#changing-the-serialization-context-on-a-per-item-basis)
    8.  [Name Conversion](core/serialization.md#name-conversion)
    9.  [Decorating a Serializer and Add Extra Data](core/serialization.md#decorating-a-serializer-and-add-extra-data)
    10. [Entity Identifier Case](core/serialization.md#entity-identifier-case)
    11. [Embedding the JSON-LD Context](core/serialization.md#embedding-the-json-ld-context)
9.  [Validation](core/validation.md)
    1.  [Using Validation Groups](core/validation.md#using-validation-groups)
    2.  [Using Validation Groups on operations](core/validation.md#using-validation-groups-on-operations)
    3.  [Dynamic Validation Groups](core/validation.md#dynamic-validation-groups)
    4.  [Error Levels and Payload Serialization](core/validation.md#error-levels-and-payload-serialization)
10. [Error Handling](core/errors.md)
11. [Converting PHP Exceptions to HTTP Errors](core/errors.md#converting-php-exceptions-to-http-errors)
12. [Pagination](core/pagination.md)
13. [Disabling the Pagination](core/pagination.md#disabling-the-pagination)
14. [Changing the Number of Items per Page](core/pagination.md#changing-the-number-of-items-per-page)
15. [Partial Pagination](core/pagination.md#partial-pagination)
16. [The Event System](core/events.md)
17. [Content Negotiation](core/content-negotiation.md)
    1.  [Enabling Several Formats](core/content-negotiation.md#enabling-several-formats)
    2.  [Registering a Custom Serializer](core/content-negotiation.md#registering-a-custom-serializer)
    3.  [Creating a Responder](core/content-negotiation.md#creating-a-responder)
    4.  [Writing a Custom Normalizer](core/content-negotiation.md#writing-a-custom-normalizer)
18. [Using External JSON-LD Vocabularies](core/external-vocabularies.md)
19. [Extending JSON-LD context](core/extending-jsonld-context.md)
20. [Data Providers](core/data-providers.md)
    1.  [Custom Collection Data Provider](core/data-providers.md#custom-collection-data-provider)
    2.  [Custom Item Data Provider](core/data-providers.md#custom-item-data-provider)
    3.  [Injecting the Serializer in an `ItemDataProvider`](core/data-providers.md#injecting-the-serializer-in-an-itemdataprovider)
21. [Data Persisters](core/data-persisters.md)
22. [Extensions](core/extensions.md)
    1.  [Custom Extension](core/extensions.md#custom-extension)
    2.  [Filter upon the current user](core/extensions.md#example)
23. [Security](core/security.md)
24. [Performance](core/performance.md)
    1.  [Enabling the Built-in HTTP Cache Invalidation System](core/performance.md#enabling-the-builtin-http-cache-invalidation-system)
    2.  [Enabling the Metadata Cache](core/performance.md#enabling-the-metadata-cache)
    3.  [Using PPM (PHP-PM)](core/performance.md#using-ppm-php-pm)
    4.  [Doctrine Queries and Indexes](core/performance.md#doctrine-queries-and-indexes)
        1.  [Search Filter](core/performance.md#search-filter)
        2.  [Eager Loading](core/performance.md#eager-loading)
            1.  [Max Joins](core/performance.md#max-joins)
            2.  [Force Eager](core/performance.md#force-eager)
            3.  [Override at Resource and Operation Level](core/performance.md#override-at-resource-and-operation-level)
            4.  [Disable Eager Loading](core/performance.md#disable-eager-loading)
        3.  [Partial Pagination](core/performance.md#partial-pagination)
25. [Operation Path Naming](core/operation-path-naming.md)
    1.  [Configuration](core/operation-path-naming.md#configuration)
    2.  [Create a Custom Operation Path Naming](core/operation-path-naming.md#create-a-custom-operation-path-resolver)
        1.  [Defining the Operation Path Naming](core/operation-path-naming.md#defining-the-operation-path-resolver)
        2.  [Registering the Service](core/operation-path-naming.md#registering-the-service)
        3.  [Configure it](core/operation-path-naming.md#configure-it)
26. [Accept application/x-www-form-urlencoded Form Data](core/form-data.md)
27. [FOSUserBundle Integration](core/fosuser-bundle.md)
    1.  [Installing the Bundle](core/fosuser-bundle.md#installing-the-bundle)
    2.  [Enabling the Bridge](core/fosuser-bundle.md#enabling-the-bridge)
    3.  [Creating a `User` Entity with Serialization Groups](core/fosuser-bundle.md#creating-a-user-entity-with-serialization-groups)
28. [Adding a JWT authentication using LexikJWTAuthenticationBundle](core/jwt.md)
    1. [Testing with Swagger](core/jwt.md#testing-with-swagger)
    2. [Testing with Behat](core/jwt.md#testing-with-behat)
29. [NelmioApiDocBundle integration](core/nelmio-api-doc.md)
30. [AngularJS Integration](core/angularjs-integration.md)
    1.  [Restangular](core/angularjs-integration.md#restangular)
    2.  [ng-admin](core/angularjs-integration.md#ng-admin)
31. [Swagger Support](core/swagger.md)
    1. [Override Swagger documentation](core/swagger.md#override-swagger-documentation)
32. [GraphQL Support](core/graphql.md)
    1. [Overall View](core/graphql.md#overall-view)
    2. [Enabling GraphQL](core/graphql.md#enabling-graphql)
    3. [GraphiQL](core/graphql.md#graphiql)
33. [Handling Data Transfer Objects (DTOs)](core/dto.md)
34. [Handling File Upload with VichUploaderBundle](core/file-upload.md)

## The Schema Generator Component: Generate Data Models from Open Vocabularies

1.  [Introduction](schema-generator/index.md)
2.  [Getting Started](schema-generator/getting-started.md)
3.  [Configuration](schema-generator/configuration.md)

## The Admin Component: Create a Fancy and Fully Featured Administration Interface

1.  [Introduction](admin/index.md)
    1.  [Features](admin/index.md#features)
2.  [Getting Started](admin/getting-started.md)
    1.  [Installation](admin/getting-started.md#installation)
    2.  [Creating the Admin](admin/getting-started.md#creating-the-admin)
    3.  [Customizing the Admin](admin/getting-started.md#customizing-the-admin)
        1.  [Using Custom Components](admin/getting-started.md#using-custom-components)
        2.  [Managing Files and Images](admin/getting-started.md#managing-files-and-images)
        3.  [Using a Custom Validation Function or Inject Custom Props](admin/getting-started.md#using-a-custom-validation-function-or-inject-custom-props)
3.  [Authentication Support](admin/authentication-support.md)
4.  [Handling Relations to Collections](admin/handling-relations-to-collections.md)
    1.  [Using an Autocomplete Input for Relations](admin/handling-relations-to-collections.md#using-an-autocomplete-input-for-relations)

## The Client Generator Component: Scaffold Progressive Web Apps and Native Apps

1.  [Introduction](client-generator/index.md)
    1.  [Features](client-generator/index.md#features)
2.  [React generator](client-generator/react.md)
3.  [Vue.js generator](client-generator/vuejs.md)
4.  [Troubleshooting](client-generator/troubleshooting.md)

## Deployment

1.  [Introduction](deployment/index.md)
2.  [Deploying to a Kubernetes Cluster](deployment/kubernetes.md)
3.  [Deploying an API Platform App on Heroku](deployment/heroku.md)

## Extra

1.  [The Release Process](extra/releases.md)
2.  [The Project's Philosophy](extra/philosophy.md)
3.  [Troubleshooting](extra/troubleshooting.md)
4.  [Contribution Guides](extra/contribution-guides.md)
5.  [Contributor Code Of Conduct](extra/conduct.md)
